--- a/manifest.json
+++ b/manifest.json
@@ -11,52 +11,52 @@
     "lang": "es-ES",
     "icons":[
         {
-            "src": "./img/logoyael-1024.png",
+            "src": "./img/favicon-1024.png",
             "sizes": "1024x1024",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-512.png",
+            "src": "./img/favicon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-384.png",
+            "src": "./img/favicon-384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-256.png",
+            "src": "./img/favicon-256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-192.png",
+            "src": "./img/favicon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-128.png",
+            "src": "./img/favicon-128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-96.png",
+            "src": "./img/favicon-96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-64.png",
+            "src": "./img/favicon-64.png",
             "sizes": "64x64",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-32.png",
+            "src": "./img/favicon-32.png",
             "sizes": "32x32",
             "type": "image/png"
         },
         {
-            "src": "./img/logoyael-16.png",
+            "src": "./img/favicon-16.png",
             "sizes": "16x16",
             "type": "image/png"
         }
